tests/errors/getchar-err.src
.IPPcode18
defvar GF@fail
GETCHAR GF@fail string@something int@-10
write GF@fail
